# python-docker-skill

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  taskfile.yaml
.run/: runserver.run.xml
docs/instructions/: 02-dynaconf.md
docs/superpowers/plans/: 2026-04-22-blueprint-improvements.md  2026-04-22-dynaconf.md
docs/superpowers/specs/: 2026-04-22-blueprint-improvements-design.md  2026-04-22-dynaconf-design.md
project/: .secrets.yaml.example  asgi.py  settings.development.yaml  settings.production.yaml  settings.py  settings.testing.yaml  settings.yaml  urls.py  wsgi.py
project/settings/: .secrets.yaml.example  base.yaml  development.yaml  production.yaml  testing.yaml
skills/python-docker/: SKILL.md  compose.md  dockerfile.md  pyproject.md  settings.md  submodules.md  taskfile.md
src/demo/: admin.py  models.py  urls.py
src/demo/migrations/: 0001_initial.py
src/demo/templates/: base.html
src/demo/templates/demo/: crud_views.html  index.html
src/demo/templates/registration/: login.html
src/demo/tests/: test_author.py  test_settings.py
src/demo/views/: author.py  index.py
tasks/: docker_compose.yaml  manage.yaml  uv.yaml
