[project]
name = "django-project-skill"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django<=6.0",
    "django-crud-views",
    "django-ordered-model"
]

[dependency-groups]
dev = [
    { include-group = "test" },
    "django-debug-toolbar>=4.3",
    "ipython",
    "ruff>=0.5",
    "mypy>=1.10",
]
test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]

[tool.uv]

[tool.uv.sources]
# prod
# django-crud-views = {git = "https://github.com/jacob-consulting/django-crud-views.git"}

# development
django-crud-views = { path = "./submodules/django-crud-views", editable = true }
