[project]
name = "django-project-skill"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django<=6.0",
    "django-crud-views",
    "django-ordered-model",
    "dynaconf",
]

[dependency-groups]
prod = [
    "uwsgi",
]
dev = [
    { include-group = "test" },
    "django-debug-toolbar>=4.3",
    "ipython",
    "ruff>=0.5",
    "mypy>=1.10",
]
test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]

[tool.uv]

[tool.uv.sources]
# enable for development of django-crud-views package as submodule
# django-crud-views = { path = "./submodules/django-crud-views", editable = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
pythonpath = ["src"]
testpaths = ["src"]
